<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="com.zoetis.digitalaristotle.model.Assessment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_curved_boundary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_60sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_5sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/rlQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#222222"
                        android:padding="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <katex.hourglass.in.mathlib.MathView
                            android:id="@+id/tvQuestion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            app:setClickable="true"
                            app:setText="Loading Question..."
                            app:setTextColor="@color/white"
                            app:setTextSize="@dimen/_9ssp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/llMultiChoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/rlQuestion">

                        <LinearLayout
                            android:id="@+id/llChoice1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_unselected"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/a" />


                            <katex.hourglass.in.mathlib.MathView
                                android:id="@+id/tvChoice1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                app:setClickable="true"
                                app:setTextSize="@dimen/_7ssp"
                                tools:text="@string/a_bottled_mayonnaise" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llChoice2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_unselected"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/b" />


                            <katex.hourglass.in.mathlib.MathView
                                android:id="@+id/tvChoice2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                app:setClickable="true"
                                app:setTextSize="@dimen/_7ssp"
                                tools:text="@string/a_bottled_mayonnaise" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llChoice3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/bg_unselected"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/c" />


                            <katex.hourglass.in.mathlib.MathView
                                android:id="@+id/tvChoice3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                app:setClickable="true"
                                app:setTextSize="@dimen/_7ssp"
                                tools:text="@string/a_bottled_mayonnaise" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llChoice4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:background="@drawable/bg_unselected"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d" />


                            <katex.hourglass.in.mathlib.MathView
                                android:id="@+id/tvChoice4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textColor="@color/black"
                                app:setClickable="true"
                                app:setTextSize="@dimen/_7ssp"
                                tools:text="@string/a_bottled_mayonnaise" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSubjective"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/rlQuestion">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etSaAnswer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/grey_curved_boundary"
                            android:hint="@string/enter_your_answer_here"
                            android:padding="@dimen/_10sdp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivSaImage"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:src="@drawable/bg_selected"
                            android:visibility="gone" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvUnanswered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@android:color/holo_red_light"
                        android:gravity="center"
                        android:text="@string/not_attempted"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>